--- a/week-0/behavioral-layer/index.html
+++ b/week-0/behavioral-layer/index.html
@@ -7,7 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1>Welcome</h1>
     <img src="images/Food.png" alt="Some potatos over a fire">
 
     <p>At Mozilla, we’re a global community of</p>
@@ -17,7 +17,7 @@
       <li>thinkers</li>
       <li>builders</li>
     </ul>
-    <button class="button-style">Change user</button>
+    <button class="pulse">Change user</button>
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
