--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <p>This is a placeholder. Replace this file with your weekly content.</p>
     <p>Once you enable GitHub Pages, this page will be live at:</p>
     <code>https://yourusername.github.io/your-repo-name</code>
+    <a href="week-0/behavioral-layer/index.html">Go to Week 0 Behavioral Layer</a>
   </main>
 
   <script src="scripts/main.js"></script>
