--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>Once you enable GitHub Pages, this page will be live at:</p>
     <code>https://yourusername.github.io/your-repo-name</code>
     <a href="week-0/behavioral-layer/index.html">Go to Week 0 Behavioral Layer</a>
+        <a href="week-1/portfolio/index.html">Go to Week 1 Portfolio</a>
   </main>
 
   <script src="scripts/main.js"></script>
