relative paths instead of absolute

--- a/week-1/portfolio/index.html
+++ b/week-1/portfolio/index.html
@@ -14,9 +14,9 @@
   <link rel="shortcut icon" href="/week-1/portfolio/assets/images/ISMS-Favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/week-1/portfolio/assets/images/ISMS-Favicon/apple-touch-icon.png" />
   <link rel="manifest" href="/week-1/portfolio/assets/images/ISMS-Favicon/site.webmanifest" />
-  <link href="/week-1/portfolio/css/normalize.css" rel="stylesheet">
-  <link href="/week-1/portfolio/css/variables.css" rel="stylesheet">
-  <link href="/week-1/portfolio/css/styles.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/variables.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
