Update index.html to use relative paths for favicon and image assets

--- a/week-1/portfolio/index.html
+++ b/week-1/portfolio/index.html
@@ -9,11 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/axs3iiy.css">
-  <link rel="icon" type="image/png" href="/week-1/portfolio/assets/images/ISMS-Favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/week-1/portfolio/assets/images/ISMS-Favicon/favicon.svg" />
-  <link rel="shortcut icon" href="/week-1/portfolio/assets/images/ISMS-Favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/week-1/portfolio/assets/images/ISMS-Favicon/apple-touch-icon.png" />
-  <link rel="manifest" href="/week-1/portfolio/assets/images/ISMS-Favicon/site.webmanifest" />
+  <link rel="icon" type="image/png" href="assets/images/ISMS-Favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="assets/images/ISMS-Favicon/favicon.svg" />
+  <link rel="shortcut icon" href="assets/images/ISMS-Favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/ISMS-Favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="assets/images/ISMS-Favicon/site.webmanifest" />
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/variables.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -37,7 +37,7 @@
         <h1>
           <span>IAN</span> <span>SZY</span> <span>MAN</span> <span>SKI</span>
         </h1>
-        <img src="/week-1/portfolio/assets/images/Portrait Edit 1.png" alt="Ian Szymanski" class="site-picture">
+        <img src="assets/images/Portrait Edit 1.png" alt="Ian Szymanski" class="site-picture">
       </div>
       <div class="site-row">
         <h4>A creative thinker who is addicted to learning, guided by the rhythm and emboldened by caffeine.</h4>
@@ -47,7 +47,7 @@
     <div class="divider"></div>
     <section id="projects">
       <div class="site-row">
-        <a href="https://landing-page-szymanskii-368.netlify.app/" target="_blank" class="item-1"><img src="/week-1/portfolio/assets/images/Landing Page Preview.PNG" alt="RIP Landing Page" class="site-picture project-tile"></a>
+        <a href="https://landing-page-szymanskii-368.netlify.app/" target="_blank" class="item-1"><img src="assets/images/Landing Page Preview.PNG" alt="RIP Landing Page" class="site-picture project-tile"></a>
         <h2 class="item-2 right">
           <span>ALW</span> <span>AYS</span> <span>IMP</span> <span>ROV</span> <span>ING</span>
         </h2>
