Added Storyteller Assignment

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <code>https://yourusername.github.io/your-repo-name</code>
     <a href="week-0/behavioral-layer/index.html">Go to Week 0 Behavioral Layer</a>
         <a href="week-1/portfolio/index.html">Go to Week 1 Portfolio</a>
+        <a href="week-1/story-teller/index.html">Go to Week 1 Story Teller</a>
   </main>
 
   <script src="scripts/main.js"></script>
