refactor CSS variables and update HTML structure for improved styling consistency

--- a/week-1/portfolio/index.html
+++ b/week-1/portfolio/index.html
@@ -20,13 +20,13 @@
 <body>
   <nav id="navbar">
     <a class="nav-link" href="#projects">
-      <h3>WORK</h3>
+      <h4>WORK</h4>
     </a>
     <a class="nav-link" href="#reflection">
-      <h3>REFLECTION</h3>
+      <h4>REFLECTION</h4>
     </a>
     <a class="nav-link" href="#contact">
-      <h3>CONTACT</h3>
+      <h4>CONTACT</h4>
     </a>
   </nav>
   <main>
@@ -38,7 +38,7 @@
         <img src="assets/images/Portrait Edit 1.png" alt="Ian Szymanski" class="site-picture">
       </div>
       <div class="site-row">
-        <h4>A creative thinker who is addicted to learning, guided by the rhythm and emboldened by caffeine.</h4>
+        <p>A creative thinker who is addicted to learning, guided by the rhythm and emboldened by caffeine.</p>
         <a target="_blank" href="https://linktr.ee/s/join-linktree-pro-for-free-bi?gclid=9cf989409f6716771c45ee9b1c805c54&gclsrc=3p.ds&&utm_source=bing&utm_medium=cpc&utm_campaign=Always_On_US_Bing_Performance_Max&utm_term=linktr.ee&utm_content=&gclid=9cf989409f6716771c45ee9b1c805c54&gclsrc=3p.ds&msclkid=9cf989409f6716771c45ee9b1c805c54"><button>CONTACT</button></a>
       </div>
     </section>
@@ -52,21 +52,21 @@
       </div>
       <div class="site-row">
         <a href="https://github.com/IanSzymanski?tab=repositories" id="profile-link" target="_blank" class="item-1"><button>GITHUB</button></a>
-        <h4 class="item-2">Want to see more of the stuff I've made? Check out this Github Repository.</h4>
+        <p class="item-2">Want to see more of the stuff I've made? Check out this Github Repository.</p>
       </div>
     </section>
     <section id="reflection">
       <div class="divider"></div>
-      <h4>This class has been a breathe of fresh air, always allowing for pure creative freedom first and constraints second. I'm grateful for that.</h4>
+      <p>This class has been a breathe of fresh air, always allowing for pure creative freedom first and constraints second. I'm grateful for that.</p>
       <div class="divider"></div>
     </section>
     <section id="contact">
-      <h4>Got a cool idea? Lets make it a reality.</h4>
+      <p>Got a cool idea? Lets make it a reality.</p>
       <a target="_blank" href="https://linktr.ee/s/join-linktree-pro-for-free-bi?gclid=9cf989409f6716771c45ee9b1c805c54&gclsrc=3p.ds&&utm_source=bing&utm_medium=cpc&utm_campaign=Always_On_US_Bing_Performance_Max&utm_term=linktr.ee&utm_content=&gclid=9cf989409f6716771c45ee9b1c805c54&gclsrc=3p.ds&msclkid=9cf989409f6716771c45ee9b1c805c54"><button>CONTACT</button></a>
     </section>
   </main>
   <footer>
-    <h3>COPYRIGHT 2025 / IAN SZYMANSKI</h3>
+    <h4>COPYRIGHT 2025 / IAN SZYMANSKI</h4>
   </footer>
 </body>
 
