add theme toggle functionality and related styles for improved user experience

--- a/week-1/portfolio/index.html
+++ b/week-1/portfolio/index.html
@@ -1,5 +1,5 @@
 <!Doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8">
@@ -28,6 +28,9 @@
     <a class="nav-link" href="#contact">
       <h4>CONTACT</h4>
     </a>
+      <a class="theme-toggle">
+        <h4>THEME</h4>
+      </a>
   </nav>
   <main>
     <section id="welcome-section">
@@ -68,6 +71,7 @@
   <footer>
     <h4>COPYRIGHT 2025 / IAN SZYMANSKI</h4>
   </footer>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
